Fixes bugs #1 and #2. Version bump to 0.9.2

--- a/src/BlazorLocalizer/Components/Localized.razor
+++ b/src/BlazorLocalizer/Components/Localized.razor
@@ -29,7 +29,7 @@ else if(options.Value.ShowKeyAsPlaceholder)
 
     protected override async Task OnInitializedAsync()
     {
-        if(!string.IsNullOrWhiteSpace(Key) && !string.IsNullOrWhiteSpace(Category))
+        if(!string.IsNullOrWhiteSpace(Key))
         {
             var culture = CultureName;
             if (string.IsNullOrWhiteSpace(culture))
