--- a/samples/BlazorLocalizerSample/Client/Pages/Index.razor
+++ b/samples/BlazorLocalizerSample/Client/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 @inject IBlazorLocalizer loc
 
-<h1>@loc["Hello, world!", this]</h1>
+<h1>@loc["Hello, world!"]</h1>
 
-@loc["Welcome to your new app.", this]
+@loc["Welcome to your new app."]
 
-<p>@loc["This text on page Index.razor has no translation - hence ResourceProviderImplementation.AddMissingKey() will be called", this]</p>
+<p>@loc["This text on page Index.razor has no translation - hence ResourceProviderImplementation.AddMissingKey() will be called"]</p>
